# Project-MORPH

./: .gitignore  CLAUDE.md  LICENSE  MORPH – Mixture Of experts with Recursive Post-processing & Hierarchy.md  PHASE4_PLAN.md  PROJECT_PLAN.md  README.md  REFACTOR_PLAN.md  TODO.md  pyproject.toml  pytest_output.txt  requirements.txt  sleep_test_results.txt
.github/workflows/: test.yml
backup/markdown/: CLAUDE.md  PHASE4_PLAN.md
docs/: api.md  architecture.md
examples/: README.md  README_GPU.md  benchmark_example.py  continual_learning_example.py  gpu_training_example.py  mnist_example.py  sleep_module_example.py
morph/: __init__.py  config.py
morph/core/: __init__.py  expert.py  gating.py  knowledge_graph.py  model.py  sleep.py
morph/utils/: benchmarks.py  data.py  distributed.py  gpu_utils.py  visualization.py
old/tests/: README_VISUALIZATIONS.md  test_continual_learning.py  test_expert.py  test_knowledge_graph.py
src/: __init__.py  config.py
src/core/: gating.py  knowledge_graph.py  model.py  sleep.py
src/utils/: benchmarks.py  distributed.py  gpu_utils.py  visualization.py
test_reports/report_20250317-130737/: index.html
test_reports/report_20250317-130948/: index.html
test_reports/report_20250317-132218/: index.html
test_reports/report_20250317-133357/: index.html
test_reports/report_20250317-133525/: index.html
test_reports/report_20250317-133606/: index.html
test_reports/report_20250317-133639/: index.html
test_reports/report_20250317-133738/: index.html
test_reports/report_20250317-134214/: index.html
tests/: README_VISUALIZATIONS.md  conftest.py  test_continual_learning.py  test_distributed.py  test_expert.py  test_expert_merging.py  test_gating.py  test_gpu_utils.py  test_knowledge_graph.py  test_live_visualization.py  test_sleep.py
tests/expert/: __init__.py  (+4 more)
(+321 files in other folders)
